--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grab-your-coffee-mobile",
+  "name": "-coffee-shop-app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -11,14 +11,27 @@
   },
   "dependencies": {
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-reanimated": "^1.13.1",
+    "react-native-web": "0.17.1",
+    "react-navigation": "^4.4.4",
+    "react-navigation-drawer": "^2.7.2",
+    "react-navigation-header-buttons": "^6.3.1",
+    "react-navigation-stack": "^2.10.4",
+    "react-navigation-tabs": "^2.11.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "redux-devtools-extension": "^2.13.9"
   },
   "private": true
 }
