--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
     "react-navigation-stack": "^2.10.4",
     "react-navigation-tabs": "^2.11.2",
     "react-redux": "^7.2.6",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
+    "expo-image-picker": "~12.0.1",
+    "expo-media-library": "~14.0.0",
+    "expo-file-system": "~13.1.4",
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
